fix: :triangular_flag_on_post: 注释 生成yaml和json
